# tsukuba-takeout

./: .editorconfig  .gitignore  .prettierrc  README.md  deploy.sh  manage.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: Kanban_Task.md
api/: serializers.py  urls.py  views.py
food_tickets/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
food_tickets/migrations/: 0001_initial.py  0002_auto_20200424_0734.py  0003_auto_20200424_0739.py
food_tickets/templates/food_tickets/: store.djt  store.html  storeList.djt  storeList.html  ticket_buy.html  ticket_detail.html
static/food_tickets/styles/: main.scss
styles/food_tickets/: main.scss
styles/food_tickets/css/: main.scss
tsukuba_takeout/: asgi.py  settings.py  urls.py  wsgi.py
typescript/: package.json  tsconfig.json
typescript/src/food_tickets/: _StoreListView.tsx  _StoreListViewItem.tsx  _store.tsx  index.tsx  ticketBuy.ts  types.ts
typescript/src/food_tickets/components/: _StoreListView.tsx
typescript/src/food_tickets/js/components/: _StoreListViewItem.tsx
typescript/src/magic/js/: magic.ts
users/: urls.py  views.py
users/templates/account/: login.html  signup.html
users/templates/registration/: login.html
