[tool.poetry]
name = "tsukuba-takeout"
version = "0.1.0"
description = ""
authors = ["SUDA Mikihiro <s@sudame.net>"]

[tool.poetry.dependencies]
python = "^3.7"
django-allauth = "^0.41.0"
django_extensions = "^2.2.9"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
